Fix: Add spacing in css for improved readability

--- a/3rd_week_mission/src/landing.css
+++ b/3rd_week_mission/src/landing.css
@@ -221,6 +221,7 @@ footer {
     width: 69.8rem;
     height: 34.3rem;
   }
+
   .content-image {
     grid-area: image;
     width: 38.5rem;
@@ -236,13 +237,13 @@ footer {
     height: 41.5rem;
     padding: 50px 0;
   }
+
   section:nth-of-type(odd) {
     grid-template:
       ". iamge"
       "title image"
-      "description image"
-      
-    grid-template-rows:  59.5px 114px 72px 59.5px ; 
+      "description image";
+    grid-template-rows: 59.5px 114px 72px 59.5px ; 
     grid-template-columns: 313px 38.5rem;
   }
   
@@ -255,7 +256,9 @@ footer {
       grid-template-columns: 38.5rem 313px ;
   }
 }
+
 /*모바일 환경*/
+
 @media (min-width: 375px) and (max-width: 767px) {
   body {
     display: flex;
@@ -263,6 +266,7 @@ footer {
     align-items: center;
     box-sizing: content-box;
   }
+
   .gnb {
     display: flex;
     justify-content: space-between;
@@ -272,12 +276,14 @@ footer {
     max-width: 192rem;
     padding: 0 3.2rem;
   }
+
   article {
     padding-top: 0;
     padding-bottom: 8rem;
     padding-left: 3.2rem;
     padding-right: 3.2rem;
   }
+
   section {
     display: flex;
     flex-direction: column;
@@ -287,19 +293,23 @@ footer {
     height: 45.1rem;
     margin: 4rem 0; 
   }
+
   .content-image {
     width: 100%;
     height: 100%;
     object-fit: fill;
     margin-top:1.4rem;
   }
+
   .title {
     font-size: 2.4rem;
     line-height: 2.864rem;
   }
+
   .description {
     font-size: 1.5rem;
   }
+
   .slogan {
     text-align: center;
     width: max-content;
@@ -309,13 +319,16 @@ footer {
     line-height: 4.2rem;
     word-break: keep-all;
   }
+
   .cta {
     height: 3.7rem;
     font-size: 1.4rem;
   }
-  br{
+
+  br {
     display: none;;
   }
+
   .cta-short {
     width: 8.0rem;
   }
@@ -323,28 +336,34 @@ footer {
   .cta-long {
     width: 20rem;
   }
+
   .gnb img {
     width: 8.867rem;
     height: 1.6rem;
   }
+
   .hero-header {
     row-gap: 2.4rem;
     padding-top: 2.8rem;
   }
+
   .hero-image {
     width: 100%;
     height: 100%;
     object-fit: fill;
   }
+
   .footer-box {
     width: 100%;
     max-width: 192rem;
     height: fit-content;
     padding: 0 3.2rem;
   }
-  footer{
+
+  footer {
     position: relative;
   }
+
   .copyright{
     position: absolute;
     bottom: 3.2rem;
